--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="action_delete_all_items">Delete All Items</string>
     <string name="action_save">Save</string>
     <string name="action_delete">Delete</string>
+    <string name="action_add_a_new_item">Add a new item</string>
 </resources>
