--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="action_save">Save</string>
     <string name="action_delete">Delete</string>
     <string name="action_add_a_new_item">Add a new item</string>
+    <string name="string_delete_dialog_msg">Delete this item?</string>
 </resources>
